--- a/css_basic/style.css
+++ b/css_basic/style.css
@@ -1,11 +1,18 @@
-.body{
+body{
     display:flex;
     flex-direction: column;
+     height: 100vh;
 }
-.main{
+main{
     display: flex;
     flex-direction: row ;
     flex: auto;
 }
-  
-  
+article{
+    flex: 2;
+    overflow-y: auto;
+}
+aside{
+    flex: 1;
+    overflow-y: auto;
+}
