--- a/headphones/1-styles.css
+++ b/headphones/1-styles.css
@@ -93,48 +93,114 @@
       }
       }
 .what-we-do {
-  padding: 60px 20px;
-  background-color: #f9f9f9;
-  text-align: center;
+    padding: 20px 40px;
+    margin-top: 40px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    max-width: 1000px;
+    margin: 0 auto;
 }
 
-.what-we-do h2 {
-  font-size: 2rem;
-  margin-bottom: 40px;
+.doing-section1 {
+    margin: 20px auto;
+    display: flex;
+    flex-direction: column;
+    max-width: 100%
 }
 
-.what-we-do-container {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 30px;
+.doing-section h1 {
+    font-size: 40px;
+    margin-bottom: 40px;
 }
 
-.what-card {
-  background: white;
-  padding: 20px;
-  width: 250px;
-  border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-  transition: transform 0.3s;
+h2 {
+    margin-bottom: 15px;
+    font-size: 40px;
 }
 
-.what-card:hover {
-  transform: translateY(-5px);
+.doing-section p {
+    font-size: 20px;
 }
 
-.what-card .icon {
-  font-size: 48px;
-  color: #ff6600;
-  margin-bottom: 15px;
+p {
+    font-size: 18px;
+    line-height: 1.4;
+    max-width: 637px;
+    margin: 0 auto;
+    align-items: center;
 }
 
-.what-card h3 {
-  font-size: 1.2rem;
-  margin-bottom: 10px;
+.doing-section2 {
+    margin: 10px auto;
+    display: flex;
+    justify-content: space-around;
+    gap: 30px;
+    max-width: 100%;
+    align-items: center;
+    margin-top: 5em;
 }
 
-.what-card p {
-  font-size: 0.95rem;
-  color: #555;
+.doing-item {
+    text-align: center;
+    flex: 1;
+}
+
+.doing-item span {
+    font-size: 80px;
+    color: #FF6565;
+}
+
+.doing-item p {
+    font-size: 16px;
+    margin-top: 50px;
+}
+
+@media (max-width: 800px) {
+    nav {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .top-bar {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .hamburger {
+        display: block;
+        font-size: 28px;
+        font-weight: bold;
+        cursor: pointer;
+        color: white;
+    }
+
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 20px;
+        width: 100%;
+        gap: 40px;
+    }
+
+    .nav-links.show {
+        display: flex;
+    }
+
+    nav img {
+        height: 40px;
+        margin: 0 auto;
+    }
+
+    .doing-section2{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .doing-item {
+        margin-bottom: 20px;
+    }
 }
